--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-inlinesvg": "^0.6.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13",
-    "react-svg-inline": "^2.0.0"
+    "react-scripts": "1.0.13"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -19,5 +20,11 @@
     "start": "npm-run-all -p watch-css start-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.8.0",
+    "eslint-config-semistandard-react": "^4.1.0",
+    "eslint-plugin-semistandard-react": "^4.0.0"
   }
 }
