--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,44 +8,59 @@
 	"orientation": "portrait",
 	"icons": [
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-36x36.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-chrome-36x36.png",
 			"sizes": "36x36",
 			"type": "image/png",
 			"density": "0.75"
 		},
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-48x48.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-chrome-48x48.png",
 			"sizes": "48x48",
 			"type": "image/png",
 			"density": "1.0"
 		},
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-72x72.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-chrome-72x72.png",
 			"sizes": "72x72",
 			"type": "image/png",
 			"density": "1.5"
 		},
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-96x96.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-chrome-96x96.png",
 			"sizes": "96x96",
 			"type": "image/png",
 			"density": "2.0"
 		},
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-144x144.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-chrome-144x144.png",
 			"sizes": "144x144",
 			"type": "image/png",
 			"density": "3.0"
 		},
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-192x192.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png",
 			"density": "4.0"
 		},
 		{
-			"src": "//www.ntmedia.me/favicon/android-chrome-192x192.png?v=2",
+			"src": "//www.ntmedia.me/favicon/android-splash-192x192.png",
 			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "//www.ntmedia.me/favicon/android-splash-256x256.png",
+			"sizes": "256x256",
+			"type": "image/png"
+		},
+		{
+			"src": "//www.ntmedia.me/favicon/android-splash-384x384.png",
+			"sizes": "384x384",
+			"type": "image/png"
+		},
+		{
+			"src": "//www.ntmedia.me/favicon/android-splash-512x512.png",
+			"sizes": "512x512",
 			"type": "image/png"
 		}
 	]
