--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "homepage": "https://www.ntmedia.me/",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-inlinesvg": "^0.6.2",
+    "node-sass-chokidar": "^1.1.2",
+    "npm-run-all": "^4.1.2",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.0-alpha.2",
+    "react-dom": "^16.2.0",
+    "react-inlinesvg": "^0.8.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
+    "react-scripts": "^1.1.1",
     "typed.js": "^2.0.6"
   },
   "scripts": {
@@ -24,10 +24,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "eslint": "^4.8.0",
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.19.0",
     "eslint-config-semistandard-react": "^4.1.0",
     "eslint-plugin-semistandard-react": "^4.0.0",
-    "surge": "^0.19.0"
+    "surge": "^0.20.1"
   }
 }
