--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.0-alpha.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.0-alpha.2",
     "react-inlinesvg": "^0.8.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
