--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-css-variables": "^2.0.1",
     "react-dom": "^16.3.1",
     "react-inlinesvg": "^0.8.1",
     "react-router-dom": "^4.2.2",
@@ -26,9 +27,10 @@
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-semistandard-react": "^4.1.0",
-    "eslint-plugin-semistandard-react": "^4.0.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-semistandard-react": "^4.0.0",
     "prettier": "1.12.0",
     "surge": "^0.20.1"
   }
