--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://www.ntmedia.me/",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
