--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
   "extends": [
     "semistandard-react",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier/react"
   ],
   "env": {
     "es6": true,
     "node": true,
     "browser": true
+  },
+  "settings": {
+    "react": {
+      "version": "16.6.1"
+    }
   }
 }
