--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "node-sass-chokidar": "^1.2.2",
-    "npm-run-all": "^4.1.2",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.1",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.1",
     "react-css-variables": "^2.0.1",
-    "react-dom": "^16.3.1",
-    "react-inlinesvg": "^0.8.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.4",
-    "typed.js": "^2.0.6"
+    "react-dom": "^16.6.1",
+    "react-inlinesvg": "^0.8.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1",
+    "typed.js": "^2.0.9"
   },
   "scripts": {
     "build-css": "sass-lint -c .sass-lint.yml './src/assets/**/*.scss' -v -q && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -26,14 +26,18 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-semistandard-react": "^4.1.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-semistandard-react": "^4.0.0",
-    "prettier": "1.12.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-semistandard-react": "^4.2.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-semistandard-react": "^4.1.0",
+    "prettier": "1.15.2",
     "sass-lint": "^1.12.1",
     "surge": "^0.20.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
