--- a/package.json
+++ b/package.json
@@ -1,36 +1,33 @@
 {
   "name": "private-portfolio",
   "version": "0.1.0",
-  "homepage": "https://www.ntmedia.me/",
+  "homepage": "https://dzoni.dev/",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
     "react-css-variables": "^2.0.1",
-    "react-dom": "^16.6.1",
-    "react-inlinesvg": "^0.8.2",
+    "react-dom": "^16.8.3",
+    "react-inlinesvg": "^0.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
-    "typed.js": "^2.0.9"
+    "react-scripts": "^2.1.5",
+    "typed.js": "^2.0.10"
   },
   "scripts": {
-    "build-css": "sass-lint -c .sass-lint.yml './src/assets/**/*.scss' -v -q && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "build": "npm run build-css && react-scripts build",
-    "start": "npm-run-all -p watch-css start-js",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-semistandard-react": "^4.2.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-semistandard-react": "^4.1.0",
-    "prettier": "1.15.2",
+    "prettier": "^1.16.4",
     "sass-lint": "^1.12.1",
     "surge": "^0.20.1"
   },
