--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint ./src --ext .js,.jsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
