--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,7 @@
     "eslint:recommended",
     "airbnb",
     "semistandard-react",
-    "prettier/react",
-    "plugin:prettier/recommended"
+    "prettier"
   ],
   "rules": {
     "import/prefer-default-export": 0,
